--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -5,13 +5,7 @@ servers:
 info:
   title: WASAText
   description: |
-    
-
-
     This API allows the user to become part of the WASAText Social Network.
-
-
-
     The user will be able to chat with other users or user groups.
   version: 0.0.1
 components:
@@ -781,7 +775,9 @@ paths:
           $ref: "#/components/responses/UnauthorizedError"
         "404":
           $ref: "#/components/responses/PartnerOrMessageNotFound"
-  "/conversations/message_comments/{message-id}":
+  
+  
+  "/conversations/messages/{message-id}/comment":
     parameters:
       - $ref: "#/components/parameters/MessageID"
     put:
