--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,6 +4,7 @@ FROM node:lts as builder
 WORKDIR /app
 COPY webui .
 ### Build Vue.js into plain HTML/CSS/JS
+RUN yarn install
 RUN yarn run build-prod
 ### Create final container
 FROM nginx:stable
